--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "fzaninotto/faker": "^1.8",
         "sensio/framework-extra-bundle": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/console": "4.2.*",
@@ -15,6 +14,7 @@
         "symfony/maker-bundle": "^1.9",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.2.*",
+        "symfony/webpack-encore-bundle": "^1.0",
         "symfony/yaml": "4.2.*"
     },
     "config": {
@@ -63,6 +63,7 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.0"
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "fzaninotto/faker": "^1.8"
     }
 }
