--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "knplabs/knp-paginator-bundle": "^2.8",
         "sensio/framework-extra-bundle": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/console": "4.2.*",
@@ -13,9 +14,11 @@
         "symfony/framework-bundle": "4.2.*",
         "symfony/maker-bundle": "^1.9",
         "symfony/orm-pack": "^1.0",
+        "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "4.2.*"
+        "symfony/yaml": "4.2.*",
+        "twig/extensions": "^1.5"
     },
     "config": {
         "preferred-install": {
@@ -64,6 +67,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "fzaninotto/faker": "^1.8"
+        "fzaninotto/faker": "^1.8",
+        "symfony/profiler-pack": "^1.0"
     }
 }
