--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,5 +1,9 @@
 easy_admin:
     site_name: 'Admin Panel'
+    design:
+        menu:
+            - { label: 'Homepage', route: 'homepage' }
+            - Blog
     search:
         title: 'ssdf'
     entities:
