crate user fixtures

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,11 @@ security:
             guard:
                 authenticators:
                     - App\Security\LoginAuthenticator
+            logout:
+                path: app_logout
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 2592000 # 30 days in seconds
 
             # activate different ways to authenticate
 
