--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "devDependencies": {
-    "@symfony/webpack-encore": "^0.22.2"
-  },
-  "dependencies": {
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.6"
-  },
-  "scripts": {
-    "encore": "encore",
-    "dev-server": "encore dev-server",
-    "dev": "encore dev",
-    "watch": "encore dev --watch",
-    "build": "encore production"
-  }
+    "devDependencies": {
+        "@symfony/webpack-encore": "^0.22.0",
+        "boostrap": "^2.0.0",
+        "bootstrap": "^4.1.3",
+        "jquery": "^3.3.1",
+        "popper.js": "^1.14.6",
+        "webpack": "^4.27.1",
+        "webpack-notifier": "^1.6.0"
+    },
+    "license": "UNLICENSED",
+    "private": true,
+    "scripts": {
+        "dev-server": "encore dev-server",
+        "dev": "encore dev",
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
+    }
 }
