--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.6.0",
         "@symfony/webpack-encore": "^0.22.0",
         "boostrap": "^2.0.0",
         "bootstrap": "^4.1.3",
@@ -15,5 +16,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "fontawesome": "^4.7.2"
     }
 }
