--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "beberlei/DoctrineExtensions": "^1.1",
         "easycorp/easyadmin-bundle": "^1.17",
         "knplabs/knp-paginator-bundle": "^2.8",
         "knplabs/knp-time-bundle": "^1.8",
