--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -27,3 +27,7 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        dql:
+            string_functions:
+                ifelse: DoctrineExtensions\Query\Mysql\IfElse
+                ifnull: DoctrineExtensions\Query\Mysql\IfNull
