--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-    "devDependencies": {
-        "@fortawesome/fontawesome-free": "^5.6.0",
-        "@symfony/webpack-encore": "^0.22.0",
-        "boostrap": "^2.0.0",
-        "bootstrap": "^4.1.3",
-        "jquery": "^3.3.1",
-        "node-sass": "^4.11.0",
-        "popper.js": "^1.14.6",
-        "sass-loader": "^7.0.1",
-        "webpack": "^4.27.1",
-        "webpack-notifier": "^1.6.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
-    "dependencies": {
-        "fontawesome": "^4.7.2"
-    }
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.0",
+    "@symfony/webpack-encore": "^0.22.0",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.11.0",
+    "popper.js": "^1.14.6",
+    "sass-loader": "^7.0.1",
+    "webpack": "^4.27.1",
+    "webpack-notifier": "^1.6.0"
+  },
+  "license": "UNLICENSED",
+  "private": true,
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress"
+  },
+  "dependencies": {
+    "fontawesome": "^4.7.2",
+    "toastr": "^2.1.4"
+  }
 }
