--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "beberlei/DoctrineExtensions": "^1.1",
         "easycorp/easyadmin-bundle": "^1.17",
+        "friendsofsymfony/ckeditor-bundle": "^2.0",
         "knplabs/knp-paginator-bundle": "^2.8",
         "knplabs/knp-time-bundle": "^1.8",
         "sensio/framework-extra-bundle": "^5.2",
