--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "sass-loader": "^7.1.0",
+    "sweetalert2": "^7.32.4",
     "webpack": "^4.27.1",
     "webpack-notifier": "^1.6.0"
   },
