--- a/.env
+++ b/.env
@@ -17,3 +17,13 @@ APP_SECRET=e718b31e9d0651320402a4676ed38821
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:1@127.0.0.1:3306/blog
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://fakeuser984@gmail.com:12345678aaa@localhost
+###< symfony/swiftmailer-bundle ###
+
+DOMAIN_NAME=http://blog.loc
+EMAIL_DEFAULT=fakeuser984@gmail.com
