--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "knplabs/knp-paginator-bundle": "^2.8",
         "knplabs/knp-time-bundle": "^1.8",
         "sensio/framework-extra-bundle": "^5.2",
+        "sensiolabs/security-checker": "^5.0",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
@@ -19,6 +20,7 @@
         "symfony/framework-bundle": "4.2.*",
         "symfony/maker-bundle": "^1.9",
         "symfony/orm-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.2",
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.0",
@@ -52,7 +54,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
