--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,5 +2,7 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+    globals:
+        user_active_interval: '%app.user_active_interval%'
 #    form_themes:
 #        - 'bootstrap_4_layout.html.twig'
