--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,5 +4,6 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         user_active_interval: '%app.user_active_interval%'
+        image_path: '/uploads/'
 #    form_themes:
 #        - 'bootstrap_4_layout.html.twig'
