--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "encore production --progress"
   },
   "dependencies": {
+    "cropperjs": "^1.4.3",
     "fontawesome": "^4.7.2",
     "select2": "4.0.1",
     "select2-bootstrap-theme": "^0.1.0-beta.10",
