--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,10 +1,3 @@
-parameters:
-    # Adds a fallback DATABASE_URL if the env var is not set.
-    # This allows you to run cache:warmup even if your
-    # environment variables are not available yet.
-    # You should not need to change this value.
-    env(DATABASE_URL): ''
-
 doctrine:
     dbal:
         # configure these for your database server
@@ -14,7 +7,7 @@ doctrine:
         default_table_options:
             charset: utf8
             collate: utf8_general_ci
-        url: '%env(resolve:DATABASE_URL)%'
+        url: '%env(DATABASE_URL)%'
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
@@ -30,3 +23,12 @@ doctrine:
             string_functions:
                 ifelse: DoctrineExtensions\Query\Mysql\IfElse
                 ifnull: DoctrineExtensions\Query\Mysql\IfNull
+        metadata_cache_driver:
+            type: service
+            id: doctrine.system_cache_provider
+        query_cache_driver:
+            type: service
+            id: doctrine.system_cache_provider
+        result_cache_driver:
+            type: service
+            id: doctrine.result_cache_provider
