--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,11 +6,11 @@ security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
-        db_provider:
+        default_provider:
             entity:
                 class: App\Entity\User
                 property: username
-        apikey_provider:
+        api_provider:
             entity:
                 class: App\Entity\User
                 property: apiKey
@@ -23,13 +23,13 @@ security:
             anonymous: true
             stateless: true
             guard:
-                provider: apikey_provider
+                provider: api_provider
                 authenticators:
                     - App\Security\TokenAuthenticator
         main:
             anonymous: true
             guard:
-                provider: db_provider
+                provider: default_provider
                 authenticators:
                     - App\Security\LoginAuthenticator
             logout:
