--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "beberlei/DoctrineExtensions": "^1.1",
         "easycorp/easyadmin-bundle": "^1.17",
         "friendsofsymfony/ckeditor-bundle": "^2.0",
+        "friendsofsymfony/elastica-bundle": "^5.0",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "knplabs/knp-paginator-bundle": "^2.8",
         "knplabs/knp-time-bundle": "^1.8",
+        "pagerfanta/pagerfanta": "1.0.5",
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^5.0",
         "stof/doctrine-extensions-bundle": "^1.3",
