--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,10 +11,11 @@
         <ini name="error_reporting" value="-1" />
         <env name="APP_ENV" value="test" />
         <env name="SHELL_VERBOSITY" value="-1" />
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
+        <testsuite name="Blogger Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
