--- a/.env.test
+++ b/.env.test
@@ -3,4 +3,4 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='s$cretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 
-DATABASE_URL=mysql://root:1@127.0.0.1:3306/blog_test
+#DATABASE_URL=mysql://root:1@127.0.0.1:3306/blog_test
